Fixed Karate bug with comma separated values.  Uses OR rather than AND now